test/files/neg/yimports-custom.check
C_2.scala:4: error: not found: value println
  def greet() = println("hello, world!")
                ^
one error found
